--- a/public/css/pages/main-page.css
+++ b/public/css/pages/main-page.css
@@ -56,6 +56,13 @@ body
     grid-gap: 5px;
 }
 
+.link-block-container a, .link-block-container h2
+{
+    
+    text-decoration: none;
+    color: #fff;
+}
+
 #second-block, #third-block, #fourth-block 
 {
     padding: 20px;
