--- a/public/css/partials/header.css
+++ b/public/css/partials/header.css
@@ -66,7 +66,8 @@ header
     border-radius: 0; 
     cursor: pointer;
     transition: background-color 0.3s ease;
-    font-size: 0.5em
+    font-size: 0.5em;
+    text-decoration: none;
 }
 
 .create-button:hover 
