--- a/public/css/pages/user-page.css
+++ b/public/css/pages/user-page.css
@@ -36,3 +36,23 @@ th, td {
 th {
     background-color: #f2f2f2;
 }
+
+.logout-button 
+{
+    background-color: hsl(0, 39%, 49%);
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 0; 
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    font-size: 0.5em;
+    text-decoration: none;
+    font-size: 1.3em;
+}
+
+.logout-button:hover
+{
+    background-color: hsl(0, 40%, 29%);
+    cursor: pointer;
+}
