--- a/public/css/pages/symposium-single.css
+++ b/public/css/pages/symposium-single.css
@@ -20,6 +20,8 @@ main
     display: flex;
     align-items: center;
     margin-bottom: 10px;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 .user-avatar 
